testsuite/codegen/compile-fail/main-has-arguments.verona
// Copyright (c) Microsoft Corporation. All rights reserved.
// Licensed under the MIT License.
class Main {
  // CHECK-L: main-has-arguments.verona:${LINE:+1}:3: error: Method 'main' has an invalid signature
  main(x: U64) { }
}
